end decoder-only

--- a/dec-transformer/shakespeare.ipynb
+++ b/dec-transformer/shakespeare.ipynb
@@ -646,7 +646,7 @@
     "\n",
     "With the equation, we can tell that theoretically the modal has **22974976** parameters. \n",
     "\n",
-    "Experimentally, we can calculate the number of parameters with code like `sum(p.numel() for p in model.parameters())`, and we will obtain the same number **22974976**. \n",
+    "Experimentally, we can calculate the number of parameters with code like `sum(p.numel() for p in model.parameters())`, and we will obtain the same number **29271040**. This equation has been tested to hold for all the hyper-parameters I have used, including a 6-layer decoder-only transformer. \n",
     "\n",
     "\n",
     "\n",
@@ -685,7 +685,7 @@
     "\n",
     "The expected FLOP per token would be **202.76 M**. Further we can have the expected total FLOP to be **498308 TFLOP** (3 times the calculation result including forward and backward), and the expected training time would be around **6076 seconds**. \n",
     "\n",
-    "Experimentally, we can simply record the training used with the specified hyper-parameters, and the total training time is around **6000 seconds**. That is quite acceptable.  \n"
+    "Experimentally, we can simply record the training used with the specified hyper-parameters, and the total training time is around **6000 seconds**. That is quite acceptable.  This similarity has been tested to hold for all the hyper-parameters I have used, including a 6-layer decoder-only transformer. \n"
    ]
   },
   {
@@ -694,7 +694,7 @@
    "source": [
     "# Experiments\n",
     "\n",
-    "Firstly we need to process the dataset. The tokenizer of llama2 includes some special tokens, like `<s>` specifying the beginning of the sequence and `</s>` specifying the ending of the sequence. Although the problem description askes us to generate *poems* of Shakespeare, but in fact the input data consists of multiple *plays* rather than *poems*. I added `<s>` and `</s>` to mark each dialogue as one sequence. \n",
+    "Firstly we need to process the dataset. The tokenizer of llama2 includes some special tokens, like `<s>` specifying the beginning of the sequence and `</s>` specifying the ending of the sequence. Although the problem description askes us to generate *poems* of Shakespeare, but in fact the input data consists of multiple *plays* rather than *poems*. I added `<s>` and `</s>` to mark each dialogue as one individual sequence. \n",
     "\n",
     "Then I trained the model with the hyper-parameters like\n",
     "\n",
